k8s/namespaces/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        supplementalGroups:
          - 44 
      automountServiceAccountToken: false
      containers:
        - name: jellyfin
          # renovate: datasource=docker depName=lscr.io/linuxserver/jellyfin
          image: lscr.io/linuxserver/jellyfin:latest@sha256:b0b6d034aa52ed6e1a76daaa3d7ed29039d2b802a50fa8ffd1d9fc8d3fd836c7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7359
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
            - containerPort: 8096
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              gpu.intel.com/i915: "1"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "4000m"
              memory: "8192Mi"
              gpu.intel.com/i915: "1"
              ephemeral-storage: "20Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
              subPath: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: media
