k8s/namespaces/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "jellyfin.hosted.fail"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
