k8s/namespaces/media/jellyfin/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/managed-by: flux
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
      ports:
        - port: 7359
          protocol: UDP
        - port: 1900
          protocol: UDP
        - port: 8096
          protocol: TCP
  egress:
    - {}
